tests/ui/extends_non_existant.stderr
error: unknown language: nonexistant
 --> tests/ui/extends_non_existant.rs:8:15
  |
8 |     #[extends(nonexistant)]
  |               ^^^^^^^^^^^
